--- a/styles.css
+++ b/styles.css
@@ -285,4 +285,15 @@ a{
 
 /*****FOOTER*****/
 
+footer>a:hover{
+	cursor: pointer;
+	color: var(--primary-purple);
+}
+
+@media screen and (max-width: 575px){
+	footer{
+		text-align: center;
+	}
+}
+
 /****************/
