--- a/styles.css
+++ b/styles.css
@@ -86,14 +86,9 @@ a{
 		background: #fff;
 		clip-path: polygon(100% 80%, 0 100%, 100% 100%);
 	}
-
-	.intro-wrapper{
-		margin-bottom: 3rem;
-		text-align: center;
-	}
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 991px) {
 	.intro::before{
 		content: '';
 		position: absolute;
@@ -108,6 +103,30 @@ a{
 
 .intro-section{
 	height: 100%;
+}
+
+@media screen and (max-width: 1880px){	
+	.intro-wrapper{
+		margin-top: 1rem;
+	}
+}
+
+@media screen and (max-width: 1200px){	
+	.intro-wrapper{
+		margin-top: 5rem;
+	}
+}
+
+@media screen and (max-width: 992px){	
+	.intro-wrapper{
+		margin-top: 1rem;
+	}
+}
+
+@media screen and (max-width: 576px){	
+	.intro-wrapper{
+		margin-top: 3rem;
+	}
 }
 
 /*SPAN COLORS*/
@@ -177,7 +196,7 @@ a{
 }
 
 .nav a:hover{
-	color: var(--primary-purple)
+	color: var(--primary-purple);
 }
 
 /******************/
@@ -216,12 +235,6 @@ a{
 .info_img{
 	width: 80%;
 	height: 80%;
-}
-
-@media screen and (max-width: 500px){
-	.info_wrapper{
-		text-align: center;
-	}
 }
 
 /*INFO SECTION END*/
@@ -278,22 +291,22 @@ a{
 	cursor: pointer;
 }
 
-
-
-
 /********************/
 
 /*****FOOTER*****/
 
-footer>a:hover{
-	cursor: pointer;
-	color: var(--primary-purple);
-}
 
-@media screen and (max-width: 575px){
-	footer{
-		text-align: center;
-	}
-}
 
 /****************/
+
+/*GALAXY FOLD OPTIMIZATION*/
+
+@media screen and (max-width: 280px){
+	/* body{
+		text-align: center;
+	} */
+
+	/* footer{
+		text-align: start;
+	} */
+}
